rust_writer_procedural/tests/ui/compile_fail/mutator_fails_if_attr_key_value_not_local.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_procedural::mutator;

#[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, invalid = path)]
struct SomeStruct;

fn main() {}
